# ncsaa-scheduler

./: .env.example  .gitignore  CRITICAL_REDESIGN_NEEDED.md  ENV_SETUP.md  FIX_ACCESS_BLOCKED.md  GOOGLE_SHEETS_FLOW.md  GOOGLE_SHEETS_SETUP.md  MIGRATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  RULE_10_IMPLEMENTATION.md  SCHEDULER_OPTIMIZATION.md  START_HERE.md  TROUBLESHOOTING.md  VISUAL_GUIDE.md  api.py  install_supabase.sh  main.py  pyproject.toml  requirements-api.txt  requirements.txt  run_api.py  run_scheduler.bat  run_scheduler.sh  scheduler.py  sheets_reader.py  sheets_writer.py  test_bug_fixes.py  validator.py
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: celery_app.py  config.py  logging_config.py
app/models/: __init__.py  models.py
app/services/: __init__.py  google_sheets.py  scheduler.py  scheduler_v2.py  sheets_reader.py  sheets_writer.py  supabase_reader.py  validator.py
app/tasks/: scheduler_tasks.py
scripts/: __init__.py  create_credentials.py  diagnose_facility_availability.py  example_usage.py  google_auth.py  run_api.py  run_celery_worker.py  run_scheduler.py
sheets_engine/: README.md  __init__.py  api.py  config.py  main.py  scheduler.py  sheets_reader.py  sheets_writer.py  validator.py
tests/: __init__.py  test_game_counts.py  test_same_school_rule.py  test_scheduler.py  test_school_based_scheduler.py  test_time_rules.py  test_time_slots_only.py
